# Chess2025

./: .gitignore  BUILD.bazel  README.md  board.cpp  board.h  human_player.cpp  main.cpp  minmax_player.cpp  output  player.h  random_player.cpp  test_board.cpp  test_board_moves.cpp  test_minmax_player.cpp
