# BUILD.bazel file for the Chess2025 directory.

# Load the C++ rules from Bazel's standard library.
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

# A C++ library target for the chess board implementation.
# This compiles the source and header files into a library.
cc_library(
    name = "board_lib",
    srcs = ["board.cpp"],
    hdrs = ["board.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "player_lib",
    srcs = ["random_player.cpp"],
    hdrs = ["player.h"],
    deps = [
        ":board_lib",
    ],
    visibility = ["//visibility:public"],
)

# A C++ test target that compiles and links the unit tests.
# It depends on the board library and the external Catch2 library.
cc_test(
    name = "test_board_moves",
    srcs = ["test_board_moves.cpp"],
    deps = [
        ":board_lib",
        "@catch2//:catch2_main",
    ],
)

# The main application binary.
# This target compiles main.cpp and links it with the board library.
cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [
        ":board_lib",
        ":player_lib",
    ],
)